# arm-rtos

./: .gitignore  CMakeLists.txt  build.sh  flash.sh  linker.ld  run.sh  term.sh  toolchain.cmake
src/: hal.c  hal.h  main.c  startup.s  syscalls.c  timer.c  timer.h
